SPM: Fix WebDialogView key event not working

WebDialogView uses UnhandledKeyboardEventHandler for unhandled
key events from renderer instead of repost and marking them as
handled.

Bug: 919183
Change-Id: I753f1892a26764c1bece8b1558985cf31dac7cb3
Reviewed-on: https://chromium-review.googlesource.com/c/1397853
Reviewed-by: Michael Wasserman <msw@chromium.org>
Commit-Queue: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620382}
Former-commit-id: 6d5f163cd9aeb9fdc9113081b3243f852b7882ec